Fix: fix yellow error